# mustrum

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: ARCHITECTURE.md  BACKLOG.md  DECISIONS.md  REQUIREMENTS.md
mustrum/: config.py
mustrum/adapters/: anthropic.py  archive.py  arxiv.py  crossref.py  enrich.py  errors.py  fake.py  oa.py  ollama.py  pdf.py
mustrum/adapters/sqlite/: repo.py  schema.py
mustrum/benchmark/: __init__.py  harness.py
mustrum/cli/: main.py
mustrum/core/: bibtex.py  models.py  normalize.py  ports.py  refimport.py  verify.py
mustrum/core/services/: audit.py  backup.py  brainstorm.py  chat.py  (+9 more)
mustrum/graph/: export.py
mustrum/mcp/: server.py
mustrum/web/: api.py
scripts/: setup.ps1  setup.sh
tests/integration/: test_cli.py  test_mcp_server.py  test_ollama_live.py  test_web_api.py
tests/unit/: test_anthropic_adapter.py  test_archive.py  test_backup_service.py  test_benchmark_harness.py  test_bibtex.py  test_brainstorm_service.py  test_chat_session.py  test_chunk.py  test_cli_error_handling.py  test_config.py  test_docs.py  test_enrich.py  test_extractors.py  test_fake_providers.py  test_fetchers.py  test_graph_export.py  test_idea_service.py  test_ingest_service.py  test_llm_provider_switch.py  test_match_service.py  test_mcp_tools.py  test_models.py  test_normalize.py  test_oa.py  test_ollama_adapter.py  test_privacy.py  test_query_service.py  test_rationale_service.py  test_refimport.py  test_relatedwork_service.py  test_sqlite_repo.py  test_summarise_service.py  test_verify.py  test_watch_folder.py
(+1 files in other folders)
