[project]
name = "mustrum"
version = "0.1.0"
description = "Local-first personal knowledge repository for academic research"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Ettore Ferranti" }]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "pymupdf>=1.28.0",
    "typer>=0.26.8",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "mutmut>=3.2",
]

[project.scripts]
mustrum = "mustrum.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mustrum"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -m 'not ollama and not network'"
markers = [
    "ollama: requires a running Ollama server (excluded by default)",
    "network: requires internet access (excluded by default)",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = "mustrum.core.*"
strict = true

[tool.mutmut]
paths_to_mutate = ["mustrum/core/"]
tests_dir = ["tests/"]
also_copy = [
    "mustrum/__init__.py",
    "mustrum/config.py",
    "mustrum/adapters/",
    "mustrum/cli/",
    "mustrum/graph/",
]
do_not_mutate = ["mustrum/core/ports.py"]  # Protocol stubs: declarations, no behaviour
